# burrow

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEV_LOG.md  LICENSE  MANUALTESTING.md  Makefile  README.md  RELEASE_VERIFICATION.md  ROADMAP.md  go.mod  go.sum  main.go  pyproject.toml  pyrightconfig.json  smithery.yaml  smoke_test.go  update_readme.sh  verification-ledger.md
cmd/stager/: main.go
internal/certgen/: certgen.go  certgen_test.go
internal/crypto/: crypto.go  crypto_test.go
internal/discovery/: discovery.go  discovery_test.go
internal/httptunnel/: client.go  httptunnel_test.go  protocol.go  secure.go  secure_test.go  server.go
internal/mesh/: mesh.go  mesh_test.go
internal/mux/: mux.go  mux_test.go
internal/netstack/: netstack.go  netstack_test.go
internal/operator/: operator.go  operator_test.go
internal/pivot/: pivot.go  pivot_test.go
internal/plugin/: plugin.go  plugin_test.go
internal/protocol/: protocol.go  protocol_test.go
internal/proxy/: httpproxy.go  httpproxy_test.go  proxy.go  proxy_test.go  session_dialer.go
internal/relay/: relay.go  relay_test.go
internal/replay/: replay.go  replay_test.go
internal/sdk/: sdk.go  sdk_test.go
internal/session/: session.go  session_test.go
internal/sys/: memexec_linux.go  memexec_other.go
internal/transport/: transport.go  transport_test.go
tests/: conftest.py  test_alpha.py  test_config.py  test_pivot.py  test_proxy.py  test_tunnel.py
wiki/: Architecture.md  Engagement-Patterns.md  Home.md  Pivoting-Methods.md  Quick-Start.md  TUI-Reference.md  Transports.md  Troubleshooting.md
(+68 files in other folders)
