[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "burrow"
version = "0.3.0b1"
description = "One-command network pivoting and tunneling tool"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "cryptography>=41.0",
]

[project.scripts]
burrow = "burrow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["burrow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
